<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.tianya.weatherforecast.activity.MainActivity">
    <item
        android:id="@+id/menu_to_city"
        android:orderInCategory="100"
        android:title="@string/title_activity_city"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_to_settings"
        android:orderInCategory="100"
        android:title="@string/title_activity_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_weather_search"
        android:orderInCategory="100"
        android:title="@string/title_weather_search"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_test"
        android:orderInCategory="100"
        android:title="@string/test"
        app:showAsAction="never"/>
</menu>
